my swagger tags got deleted when I worked on the catches bleh
